[package]
name = "adventofcode2023"
version = "0.1.0"
authors = ["Niklas Hallqvist <niklas@hallqvist.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#byte_set = "0.1"
closure = "0.3"
#dlv-list = "0.4"
#evmap = "10.0.2"
itertools = "0.12"
lazy_static = "1.4"
#nalgebra = "0.31"
num = "0.4"
#reduce = "0.1"
regex = "1.10"
unreachable = "1.0.0"
#simple-error = "0.2"
